CSS.css
body {
    font-family: 'Ink Free', arvo;
    text-align: center;
    font-size: x-large;
}

* {
    margin: 0;
    padding: 0;
}

.intro {
    top: 0;
    background: #ABF0FC;
    min-height: 55vh;
    padding-top: 45vh;
}

.intro p {
    color: black;
}

nav ul {
    text-align: right;
    position: fixed;
    width: 100%;
    background-color: #e0ebe8;
}

nav ul li {
    display: inline-block;
    margin: 55px;
    margin-bottom: 15px;
    margin-top: 25px;
}

nav ul li a {
    color: white;
    text-decoration: none;
}

nav ul li a:hover {
    color: #BFFCAB;
}

#navbar {
    background: black;
}

#projects {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#projects>div {
    margin: 20px;
    align-content: stretch;
}

.work-header {
    margin-top: 50px;
    color: black;
    font-weight: normal;
}

#people-list li {
    list-style-type: none;
    background-color: black;
    color: paleturquoise;
    width: 280px;
    margin: 10px 10px;
}

#people-list li:hover {
    background-color: darkgoldenrod;
}

#film-list li {
    list-style-type: none;
    background-color: powderblue;
    width: 280px;
    margin: 10px 10px;
}

#film-list li:hover {
    background-color: purple;
}

.project {
    text-decoration: none;
    color: black;
    display: inline-block;
    overflow: hidden;
    border: 5px black;
    height: 240px;
    width: 280px;
    margin: 10px 10px;
}

#gravatar {
    width: 75%;
    height: 180px;
    border-bottom: 2px solid black;
}

.project-title {
    font-weight: bold;
}


/*this media query was a nightmare do not delete*/

@media only screen and (max-width: 500px) {
    nav ul {
        text-align: center;
    }
    nav ul li {
        margin: 20px;
    }
}

.contact {
    background: #FAC0B3;
    padding-bottom: 160px;
}

.header {
    padding: 160px 0 110px;
}

.contact-details {
    display: inline-block;
    font-weight: bold;
    margin: 0 35px 45px 35px;
    list-style-type: none;
    border: 3px solid black;
    border-radius: 100%;
    width: 110px;
    height: 100px;
    line-height: 100px;
    background: #e0ebe8;
    color: black;
    text-decoration: none;
}

.contact-details:hover {
    background: black;
    color: #BFFCAB;
}

footer {
    padding: 8px;
    background: gray;
    color: white;
    line-height: 40px;
}

footer a {
    color: white;
}

